--- a/info.yaml
+++ b/info.yaml
@@ -21,8 +21,8 @@ project:
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
+  ui[0]: "clk"
+  ui[1]: "reset"
   ui[2]: ""
   ui[3]: ""
   ui[4]: ""
@@ -31,8 +31,8 @@ pinout:
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
+  uo[0]: "scl"
+  uo[1]: "tx"
   uo[2]: ""
   uo[3]: ""
   uo[4]: ""
@@ -41,7 +41,7 @@ pinout:
   uo[7]: ""
 
   # Bidirectional pins
-  uio[0]: ""
+  uio[0]: "sda"
   uio[1]: ""
   uio[2]: ""
   uio[3]: ""
